--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,8 +7,7 @@
         
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav">
-                <li class="nav-item"><a href="#" class="nav-link">新規登録</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">ログイン</a></li>
+                <li class="nav-item"><%= link_to '会員登録', signup_path, class: 'nav-link' %></li>
             </ul>
         </div>
     </nav>
