--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,6 +1,7 @@
 <div>
     <div>
         <h1>クイズで福祉を学ぼう</h1>
+        <%= link_to '会員登録', signup_path, class: 'btn btn-lg btn-primary' %>
     </div>
     <div>
         <div>
