--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-sm-8">
-        <h2>が作成したクイズ</h2>
+        <h2><%= @user.name %>さんが作成したクイズ</h2>
     </div>
     <aside class="col-sm-4">
         <h3>ユーザー</h3>
