--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,13 +1,24 @@
 <header class="mb-4">
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">ふくまな</a>
+        <% if logged_in? %>
+            <p class="navbar-brand">ふくまな</p>
+        <% else %>    
+            <a class="navbar-brand" href="/">ふくまな</a>
+        <% end %>    
+        
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
             <span class="navbar-toggler-icon"></span>
         </button>
         
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav">
-                <li class="nav-item"><%= link_to '会員登録', signup_path, class: 'nav-link' %></li>
+                <% if logged_in? %>
+                    <li class="nav-item"><%= link_to 'ユーザー', user_path, class: 'nav-link' %></li>
+                    <li class="nav-item"><%= link_to 'ログアウト', logout_path, method: :delete, class: 'nav-link' %></li>
+                <% else %>
+                    <li class="nav-item"><%= link_to '会員登録', signup_path, class: 'nav-link' %></li>
+                    <li class="nav-item"><%= link_to 'ログイン', login_path, class: 'nav-link' %></li>
+                <% end %>
             </ul>
         </div>
     </nav>
