--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,7 +1,8 @@
 <div>
     <div>
         <h1>クイズで福祉を学ぼう</h1>
-        <%= link_to '会員登録', signup_path, class: 'btn btn-lg btn-primary' %>
+        <%= link_to '会員登録', signup_path, class: 'btn btn-lg btn-success' %>
+        <%= link_to 'ログイン', login_path, class: 'btn btn-lg btn-primary' %>
     </div>
     <div>
         <div>
