--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,20 +16,20 @@
         
         <div class="form-group">
             <%= f.label :email, 'Email' %>
-            <%= f.text_field :email, class: 'form-control' %>
+            <%= f.email_field :email, class: 'form-control' %>
         </div>
         
         <div class="form-group">
             <%= f.label :password, 'Password' %>
-            <%= f.text_field :password, class: 'form-control' %>
+            <%= f.password_field :password, class: 'form-control' %>
         </div>
         
         <div class="form-group">
             <%= f.label :password_confirmation, 'Confirmation' %>
-            <%= f.text_field :password_confirmation, class: 'form-control' %>
+            <%= f.password_field :password_confirmation, class: 'form-control' %>
         </div>
         
-        <%= f.submit '新規登録', class: 'btn btn-primary btn-block' %>
+        <%= f.submit '新規登録', class: 'btn btn-success btn-block' %>
         
         <% end %>
     </div>
