--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -7,11 +7,11 @@
     <div>
         <div>
             <p>他の人のクイズを見られる</p>
-            
+            <%= link_to 'クイズ一覧', quizzes_path, class: 'nav-link' %>
         </div>
         <div>
             <p>自分でクイズを作れる</p>
-            
+            <%= link_to 'ログイン', login_path, class: 'nav-link' %>
         </div>
     </div>
 </div>
