--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
 <header class="mb-4">
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-info">
         <% if logged_in? %>
-            <p class="navbar-brand">ふくまな</p>
+            <%= link_to 'ふくまな', user_path(current_user), class: 'nav-link navbar-brand' %>
         <% else %>    
             <a class="navbar-brand" href="/">ふくまな</a>
         <% end %>    
@@ -13,7 +13,9 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <% if logged_in? %>
-                    <li class="nav-item"><%= link_to 'ユーザー', user_path, class: 'nav-link' %></li>
+                    <li class="nav-item"><%= link_to 'ユーザー', user_path(current_user), class: 'nav-link' %></li>
+                    <li class="nav-item"><%= link_to 'クイズの作成', new_quiz_path, class: 'nav-link' %></li>
+                    <li class="nav-item"><%= link_to 'クイズ一覧', quizzes_path, class: 'nav-link' %></li>
                     <li class="nav-item"><%= link_to 'ログアウト', logout_path, method: :delete, class: 'nav-link' %></li>
                 <% else %>
                     <li class="nav-item"><%= link_to '会員登録', signup_path, class: 'nav-link' %></li>
