--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,14 @@
 <div class="row">
-    <div class="col-sm-8">
-        <h2><%= @user.name %>さんが作成したクイズ</h2>
+    <div class="col-sm-7">
+        <h2 class="my-3"><%= @user.name %>さんが作成したクイズ</h2>
+        <%= render 'quizzes/quizzes', quizzes: @quizzes %>
+        <%= link_to 'クイズを作成する', new_quiz_path, class: 'nav-link' %>
     </div>
-    <aside class="col-sm-4">
-        <h3>ユーザー</h3>
+    <aside class="offset-sm-2 col-sm-3">
+        <h2 class="my-3">ユーザー</h2>
         <%= @user.name %>
+        <div>
+            <img class="mr-2 rounded" src="<%= gravatar_url(@user, { size: 150 }) %>" alt="">
+        </div>
     </aside>
 </div>
