--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <header class="mb-4">
-    <nav class="navbar navbar-expand-sm navbar-dark bg-info">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-secondary">
         <% if logged_in? %>
             <%= link_to 'ふくまな', user_path(current_user), class: 'nav-link navbar-brand' %>
         <% else %>    
