--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,17 +1,19 @@
-<div>
-    <div>
-        <h1>クイズで福祉を学ぼう</h1>
-        <%= link_to '会員登録', signup_path, class: 'btn btn-lg btn-success' %>
-        <%= link_to 'ログイン', login_path, class: 'btn btn-lg btn-primary' %>
+<div class="row justify-content-between">
+    <div class="col-sm-4 text-center py-4 my-4">
+        <h1 class="py-4 my-4">クイズで<br>福祉を学ぼう</h1>
+        <p class="pt-4 mt-4"><%= link_to '会員登録', signup_path, class: 'btn btn-lg btn-success w-50' %></p>
+        <p class="py-4"><%= link_to 'ログイン', login_path, class: 'btn btn-lg btn-primary w-50' %></p>
     </div>
-    <div>
-        <div>
-            <p>他の人のクイズを見られる</p>
-            <%= link_to 'クイズ一覧', quizzes_path, class: 'nav-link' %>
+    <div class="col-sm-6 offset-sm-2">
+        <div class="py-3">
+            <h3>他の人のクイズを見られる</h3>
+            <p><%= image_tag '/quiz2.png', class: 'border border-dark w-100' %></p>
+            <p><%= link_to 'クイズ一覧', quizzes_path %>を見る</p>
         </div>
-        <div>
-            <p>自分でクイズを作れる</p>
-            <%= link_to 'ログイン', login_path, class: 'nav-link' %>
+        <div class="py-3">
+            <h3>自分でクイズを作れる</h3>
+            <p><%= image_tag '/quiz1.png', class: 'border border-dark w-100' %></p>
+            <p><%= link_to 'ログイン', login_path %>してクイズを作成する</p>
         </div>
     </div>
 </div>
