--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,11 +2,11 @@
     <div class="col-sm-7">
         <h2 class="my-3"><%= @user.name %>さんが作成したクイズ</h2>
         <%= render 'quizzes/quizzes', quizzes: @quizzes %>
-        <%= link_to 'クイズを作成する', new_quiz_path, class: 'nav-link' %>
+        <p><%= link_to 'クイズを作成する', new_quiz_path, class: 'nav-link' %></p>
     </div>
     <aside class="offset-sm-2 col-sm-3">
         <h2 class="my-3">ユーザー</h2>
-        <%= @user.name %>
+        <h5><%= @user.name %></h5>
         <div>
             <img class="mr-2 rounded" src="<%= gravatar_url(@user, { size: 150 }) %>" alt="">
         </div>
