--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,7 +15,7 @@
         <div class="mr-4 collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <% if logged_in? %>
-                    <li class="nav-item"><%= link_to 'ユーザー', user_path(current_user), class: 'nav-link' %></li>
+                    <li class="nav-item"><%= link_to 'マイページ', user_path(current_user), class: 'nav-link' %></li>
                     <li class="nav-item"><%= link_to 'クイズの作成', new_quiz_path, class: 'nav-link' %></li>
                     <li class="nav-item"><%= link_to 'クイズ一覧', quizzes_path, class: 'nav-link' %></li>
                     <li class="nav-item"><%= link_to 'ログアウト', logout_path, method: :delete, class: 'nav-link' %></li>
