--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,18 +1,18 @@
 <div class="row justify-content-between">
     <div class="col-sm-4 text-center py-4 my-4">
-        <h1 class="py-4 my-4">クイズで<br>福祉を学ぼう</h1>
+        <h1 class="py-4 my-4">クイズで福祉を<br>学ぼう</h1>
         <p class="pt-4 mt-4"><%= link_to '会員登録', signup_path, class: 'btn btn-lg btn-success w-50' %></p>
         <p class="py-4"><%= link_to 'ログイン', login_path, class: 'btn btn-lg btn-primary w-50' %></p>
     </div>
     <div class="col-sm-6 offset-sm-2">
         <div class="py-3">
-            <h3>他の人のクイズを見られる</h3>
-            <p><%= image_tag '/quiz2.png', class: 'border border-dark w-100' %></p>
+            <h4>他の人のクイズを見られる</h4>
+            <p><%= image_tag '/quiz5.png', class: 'border border-dark w-100' %></p>
             <p><%= link_to 'クイズ一覧', quizzes_path %>を見る</p>
         </div>
         <div class="py-3">
-            <h3>自分でクイズを作れる</h3>
-            <p><%= image_tag '/quiz1.png', class: 'border border-dark w-100' %></p>
+            <h4>自分でクイズを作れる</h4>
+            <p><%= image_tag '/quiz3.png', class: 'border border-dark w-100' %></p>
             <p><%= link_to 'ログイン', login_path %>してクイズを作成する</p>
         </div>
     </div>
