--- a/app/views/quizzes/_form.html.erb
+++ b/app/views/quizzes/_form.html.erb
@@ -1,40 +1,56 @@
-<div class="offset-sm-2 col-sm-8">
+<div>
   <%= form_with(model: quiz, local: true) do |f| %>
+    <%= render 'layouts/error_messages', model: quiz %>
+  
        <%= f.fields_for :genre do |i| %> 
-            <p>クイズのジャンル</p>
-          <div>  
-            <%= i.radio_button :category, :"0" %>
-            <%= i.label :子ども・子育て支援 %>
-            <%= i.radio_button :category, :"1" %>
-            <%= i.label :介護 %>
-            <%= i.radio_button :category, :"2" %>
-            <%= i.label :障害 %>
-            <%= i.radio_button :category, :"3" %>
-            <%= i.label :高齢 %>
-            <%= i.radio_button :category, :"4" %>
-            <%= i.label :マイノリティ %>
-            <%= i.radio_button :category, :"5" %>
-            <%= i.label :地域・居場所 %>
-            <%= i.radio_button :category, :"6" %>
-            <%= i.label :ボランティア %>
-            <%= i.radio_button :category, :"7" %>
-            <%= i.label :多文化 %>
-            <%= i.radio_button :category, :"8" %>
-            <%= i.label :人権 %>
-            <%= i.radio_button :category, :"9" %>
-            <%= i.label :その他 %>
+          <p>クイズのジャンル</p>
+          <div class="btn-group btn-group-toggle w-100 mb-4" data-toggle="buttons">
+            <%= i.label :category, class: "btn btn-outline-secondary w-100" do %>
+              <%= i.radio_button :category, "0" %>子ども
+            <% end %>
+            <%= i.label :category, class: "btn btn-outline-secondary w-100" do %>
+              <%= i.radio_button :category, "1" %>介護
+            <% end %>            
+            <%= i.label :category, class: "btn btn-outline-secondary w-100" do %>
+              <%= i.radio_button :category, "2" %>障害
+            <% end %>            
+            <%= i.label :category, class: "btn btn-outline-secondary w-100" do %>
+              <%= i.radio_button :category, "3" %>高齢
+            <% end %>            
+            <%= i.label :category, class: "btn btn-outline-secondary w-100" do %>
+              <%= i.radio_button :category, "4" %>マイノリティ
+            <% end %>
+            <%= i.label :category, class: "btn btn-outline-secondary w-100" do %>
+              <%= i.radio_button :category, "5" %>地域
+            <% end %>            
+            <%= i.label :category, class: "btn btn-outline-secondary w-100" do %>
+              <%= i.radio_button :category, "6" %>ボランティア
+            <% end %>            
+            <%= i.label :category, class: "btn btn-outline-secondary w-100" do %>
+              <%= i.radio_button :category, "7" %>多文化
+            <% end %>            
+            <%= i.label :category, class: "btn btn-outline-secondary w-100" do %>
+              <%= i.radio_button :category, "8" %>人権
+            <% end %>            
+            <%= i.label :category, class: "btn btn-outline-secondary w-100" do %>
+              <%= i.radio_button :category, "9" %>その他
+            <% end %>
+
           </div>
         <% end %>
-          <div class="form-group">
+        
+        <div class="row my-4">
+          <div class="form-group col-sm-6">
             <p>クイズの内容</p>
-            <%= f.text_area :content, class: 'form-control', rows: 5 %>
+            <%= f.text_area :content, class: 'form-control', rows: 7 %>
           </div>
-          <div class="form-group">
+          <div class="form-group col-sm-6">
             <p>クイズの答え</p>
-            <%= f.text_area :answer, class: 'form-control', rows: 5 %>
+            <%= f.text_area :answer, class: 'form-control', rows: 7 %>
           </div>
-          <div class="offset-sm-4 col-sm-4">
-            <%= f.submit '投稿', class: 'btn btn-primary btn-block' %>
-          </div>
+        </div>
+        <div class="col-sm-2 py-4 my-4">
+          <%= f.submit '投稿', class: 'btn btn-primary btn-block' %>
+        </div>
   <% end %>
 </div>
