--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -1,10 +1,10 @@
 <div>
     <div class="py-4 row">
-        <div class="col-sm-6">
+        <div class="col-md-6">
             <h4 class="border-bottom py-2">クイズの問題</h4>
             <p><%= simple_format(@quiz.content) %></p>
         </div>
-        <div class="col-sm-6">
+        <div class="col-md-6">
             <h4 class="border-bottom py-2">クイズの答え</h4>
             <p><%= simple_format(@quiz.answer) %></p>
         </div>
