--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,10 +1,10 @@
 <div class="row justify-content-between">
-    <div class="col-sm-4 text-center py-4 my-4">
+    <div class="col-lg-4 text-center py-4 my-4">
         <h1 class="py-4 my-4">クイズで福祉を<br>学ぼう</h1>
         <p class="pt-4 mt-4"><%= link_to '会員登録', signup_path, class: 'btn btn-lg btn-success w-50' %></p>
         <p class="py-4"><%= link_to 'ログイン', login_path, class: 'btn btn-lg btn-primary w-50' %></p>
     </div>
-    <div class="col-sm-6 offset-sm-2">
+    <div class="col-lg-6 offset-lg-2">
         <div class="py-3">
             <h4>他の人のクイズを見られる</h4>
             <p><%= image_tag '/quiz5.png', class: 'border border-dark w-100' %></p>
