--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,21 @@
 <div class="row">
-    <div class="col-sm-7">
+    <div class="col-lg-7">
         <h2 class="my-3"><%= @user.name %>さんが作成したクイズ</h2>
         <%= render 'quizzes/quizzes', quizzes: @quizzes %>
     </div>
-    <aside class="offset-sm-2 col-sm-3">
+    <aside class="offset-lg-1 col-lg-4">
         <h2 class="my-3">ユーザー</h2>
-        <div>
-            <h5><%= @user.name %></h5>
-            <img class="mr-2 rounded" src="<%= gravatar_url(@user, { size: 150 }) %>" alt="">
+        <div class="card">
+            <div class="card-header">
+                <img class="mr-2 rounded" src="<%= gravatar_url(@user, { size: 40 }) %>" alt="">
+                <%= @user.name %>
+            </div>
+            <div class="card-body">
+                作成したクイズの数：<%= @user.quizzes.count %>
+            </div>
         </div>
-        <p><%= link_to 'クイズを作成する', new_quiz_path, class: 'nav-link' %></p>
+        <div class="p-4">
+            <%= link_to 'クイズを作成する', new_quiz_path %>
+        </div>
     </aside>
 </div>
