--- a/app/views/quizzes/_quizzes.html.erb
+++ b/app/views/quizzes/_quizzes.html.erb
@@ -23,8 +23,10 @@
                         <%= link_to "削除", quiz, method: :delete, data: { confirm: "このクイズを削除しますか？" }, class: 'btn btn-danger btn-sm' %>
                     <% end %>
                 </div>
-                <div class="col-2">   
-                    <%= render "favorites/favorite_button", quiz: quiz %>
+                <div class="col-2">
+                    <% if logged_in? %>
+                        <%= render "favorites/favorite_button", quiz: quiz %>
+                    <% end %>    
                 </div>
             </div>
         </div>    
